[build-system]
requires      = ["setuptools>=61.0.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "j2ipaddr"
version = "1.0.2"
description = "Jinja2 filters for IP addresses, the easy way"
readme = "README.md"
authors = [{ name = "Arturo Baldo", email = "baldoarturo@mail.com" }]
license = { file = "LICENSE" }
classifiers = [
    "License :: OSI Approved :: GNU Affero General Public License v3 or later (AGPLv3+)",
    "Programming Language :: Python",
    "Programming Language :: Python :: 3",
]
keywords = ["jinja2", "jinja", "filters", "netaddr", "ipaddr", "networking"]
dependencies = [
    "netaddr",
]
requires-python = ">=3.8"


[project.urls]
Homepage = "https://github.com/baldoarturo/j2ipaddr"

[tool.setuptools]
packages = ["j2ipaddr"]